syntax = "proto3";
import "google/protobuf/empty.proto";
package proto;
option go_package = "./proto";

message Mail {
  string MessageID = 1; // Unique ID number for this person.
  string Subject = 2;
  repeated Address To = 3;
  Address From = 4;
  repeated Body Text = 5;
  Body Attachment = 6;
}
message MailTask{
  Address From = 1;
  repeated Address To = 2;
  repeated Address Cc = 3;
  repeated Address Bcc = 4;
  string Subject = 5;
  string ReplyId = 6;
  Body Text = 7;
  AttachmentRequest  Attachment = 8;
}

message AttachmentRequest{
  bool WithAttachment = 1;
  string AttachmentID = 2;
}

message Body {
  string contentType = 1;
  bytes mainBody = 2;
}

message Address {
  string name = 1;
  string address = 2;
}

message SendMailResponse {
  string MsgID = 1; // Unique ID number for this person.
}
message Server {
  string Name = 1;
}

message UploadFile{
    string Name = 1;
    string ContentType = 2;
    bytes Content = 3;
}

message UploadResponse{
  string FileID = 1;
}

message ServerList {
  repeated Server Items = 1;
}

service MailBox{
  rpc Send(MailTask)returns (SendMailResponse){}

  rpc ListServer(google.protobuf.Empty)returns (ServerList){}

  rpc Upload(stream UploadFile)returns (UploadResponse){}

  rpc Watch(Server) returns (stream Mail) {}

}